class MusicaApp extends ReprodutorMusical {
	@Override
	public void selecionarMusica(String musica) {
		 System.out.println("Selecionando a musica " + musica + " do app de musica.");
	};
}
