interface Navegabilidade {
  public void exibirPagina(String url);
  public void atualizarPagina();
}
