class NavegadorInternetApp extends NavegadorInternet {
	@Override
	public void adicionarNovaAba() {
		System.out.println("Adicionando nova aba no app navegador de internet.");
	};
}
