interface ReprodutorAudiovisual {
  public void tocar();
  public void pausar();
}
