interface Telefone {
  public void ligar(String numero);
  public void atender();
}
