class TelefoneApp extends AparelhoTelefonico {
	@Override
    public void iniciarCorreioVoz() {
		System.out.println("Iniciando correio voz do app de telefone.");
    }
}
